executable('simple', 'simple/mymod.cpp', 'main.cpp', include_directories: '../include')
executable('dependency', 'dependency/mod1.cpp','dependency/mod2.cpp', 'main.cpp', include_directories: '../include')

executable('circular_dependency', 'circular_dependency/mod.cpp', 'main.cpp', include_directories: '../include')
